Updated JavaOCLRenderEngine
Changed all classes to be compatible with Java SE 8 JDK.
Changed to 2x SSAA with 1/2 temporal step anti-aliasing with filtering for native quality fast rendering.